created booklist.js and added to index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>My Curriculum</title>
         <script defer src="script.js"></script>
         <!-- <script defer src="grading.js"></script> -->
+        <script defer src="booklist.js"></script>
         <script defer src="curriculum.js"></script>
     </head>
     <body>
