edits to html content

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>My Curriculum</title>
         <script defer src="script.js"></script>
         <!-- <script defer src="grading.js"></script> -->
+        <script defer src="booklist.js"></script>
         <script defer src="curriculum.js"></script>
     </head>
     <body>
@@ -68,7 +69,7 @@
                     <input type="date" id="new-assignment-start" name="new-assignment-start">
                     <label for="new-assignment-due">Due Date:</label>
                     <input type="date" id="new-assignment-due" name="new-assignment-due">
-                    <input type="submit" id='submit-new' value="Add New Assignment" />
+                    <input type="submit" id='submit-new' value="Submit New Assignment" />
                 </form>
             </div>
             <div id="edit-assignment">
