--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <form id="search">
                 <label for="book-search">Search:</label>
                 <input type="text" id="nook-search" name="nook-search">
+                <input type="submit">Search</input>
             </form>
             <div id="all-books">
                 <div class="book-listing">
