refactoring js code, including addition of dataset functionality

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <link rel="stylesheet" href="style.css" />
         <title>My Curriculum</title>
         <script defer src="script.js"></script>
-        <!-- <script defer src="grading.js"></script> -->
-        <script defer src="curriculum.js"></script>         
+        <script defer src="helper.js"></script>
+        <script defer src="curriculum.js"></script>
+        <script defer src="grading.js"></script>
         <script defer src="booklist.js"></script>
     </head>
     <body>
