--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                           <th>Assignment</th>
                           <th>Start Date</th>
                           <th>Due Date</th>
+                          <th>Max Points</th>
                           <th>Edit</th>
                         </tr>
                       </table>
@@ -74,6 +75,10 @@
                         <label for="new-assignment-due">Due Date:</label>
                         <input type="date" id="new-assignment-due" name="new-assignment-due">
                     </div>
+                    <div class="form-group">
+                        <label for="new-assignment-max-points">Due Date:</label>
+                        <input type="text" id="new-assignment-max-points" name="new-assignment-max-points">
+                    </div>
                     <input type="submit" id='submit-new' value="Submit New Assignment" />
                 </form>
             </div>
@@ -96,6 +101,10 @@
                         <label for="edit-assignment-due">Due Date:</label>
                         <input type="date" id="edit-assignment-due" name="edit-assignment-due">
                     </div>
+                    <div class="form-group">
+                        <label for="edit-assignment-max-points">Max Points:</label>
+                        <input type="text" id="edit-assignment-max-points" name="edit-assignment-max-points">
+                    </div>
                     <input type="submit" id='submit-edit' value="EDIT FORM" />
                 </form>
             </div>
@@ -114,17 +123,21 @@
                     <tr>
                         <th>ID</th>
                         <th>Assignment</th>
-                        <th>Grade</th>
+                        <th>Start Date</th>
+                        <th>Due Date</th>
+                        <th>Max Points</th>
+                        <th>Points</th>
+                        <th>Score</th>                          
                         <th>Edit</th>
                       </tr>
                 </table>
             </div>
             <div id="assignment-detail">
-                <h2 id="proj-detail-id"></h2>
-                <p id="proj-detail-name"></p>
-                <p id="proj-detail-description"></p>
-                <p id="proj-detail-start"></p>
-                <p id="proj-detail-due"></p>
+                <h2 id="assignment-detail-id"></h2>
+                <p id="assignment-detail-name"></p>
+                <p id="assignment-detail-description"></p>
+                <p id="assignment-detail-start"></p>
+                <p id="assignment-detail-due"></p>
             </div>
             <div id="edit-grading" class="hidden">
                 <form>
