splitting table rendering into create and and populate functions

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <input type="date" id="new-assignment-due" name="new-assignment-due">
                     </div>
                     <div class="form-group">
-                        <label for="new-assignment-max-points">Due Date:</label>
+                        <label for="new-assignment-max-points">Max Points:</label>
                         <input type="text" id="new-assignment-max-points" name="new-assignment-max-points">
                     </div>
                     <input type="submit" id='submit-new' value="Submit New Assignment" />
@@ -132,25 +132,27 @@
                       </tr>
                 </table>
             </div>
-            <div id="assignment-detail">
-                <h2 id="assignment-detail-id"></h2>
-                <p id="assignment-detail-name"></p>
-                <p id="assignment-detail-description"></p>
-                <p id="assignment-detail-start"></p>
-                <p id="assignment-detail-due"></p>
-            </div>
             <div id="edit-grading" class="hidden">
-                <form>
-                    <div class="form-group">
-                        <label for="edit-grade">Grade:</label>
-                        <input type="text" id="edit-grade" name="edit-grade">
-                    </div>
-                    <div class="form-group">
-                        <label for="edit-comments">Comments:</label>
-                        <input type="text" id="edit-comments" name="edit-comments">
-                    </div>
-                    <input type="submit" id='submit-grade' value="EDIT FORM" />
-                </form>
+                <div id="assignment-detail">
+                    <p id="assignment-detail-name"></p>
+                    <p id="assignment-detail-description"></p>
+                    <p id="assignment-detail-start"></p>
+                    <p id="assignment-detail-due"></p>
+                    <p id="assignment-max-points"></p>
+                </div>
+                <div>
+                    <form>
+                        <div class="form-group">
+                            <label for="edit-grade">Score:</label>
+                            <input type="text" id="edit-grade" name="edit-grade">
+                        </div>
+                        <div class="form-group">
+                            <label for="edit-comments">Comments:</label>
+                            <input type="text" id="edit-comments" name="edit-comments">
+                        </div>
+                        <input type="submit" id='submit-grade' value="EDIT FORM" />
+                    </form>
+                </div>
             </div>
         </div>
         <footer>
