changing grading tab to be by assignment rather than by student

--- a/index.html
+++ b/index.html
@@ -117,26 +117,24 @@
         </div>
         <div id="grading" class="tab-content">
             <div>
-                <label for="student-select">Student:</label>
-                <select id="student-select">
-                    <option value="" disabled selected>Select Student</option>
+                <label for="assignment-select">Student:</label>
+                <select id="assignment-select">
+                    <option value="" disabled selected>Select Assignment</option>
                 </select>
             </div>
             <div id="student">
                 <p id="student-id"></p>
                 <h2 id="student-name"></h2>
             </div>
-            <div id="student-assignments" class="hidden">
+            <div id="assignment-grades" class="hidden">
                 <ul></ul>
-                <h2>Student Assignments</h2>
+                <h2>Assignment Grades</h2>
                 <table>
                     <tr>
                         <th>ID</th>
-                        <th>Assignment</th>
-                        <th>Start Date</th>
-                        <th>Due Date</th>
-                        <th>Max Points</th>
+                        <th>Name</th>
                         <th>Points</th>
+                        <th>Max Points</th>
                         <th>Score</th>                          
                         <th>Edit</th>
                       </tr>
@@ -164,6 +162,34 @@
                     </div>
                     <input type="submit" id='submit-grade' value="EDIT FORM" />
                 </form>
+            </div>
+        </div>
+        <div id="performance" class="tab-content">
+            <div>
+                <label for="student-select">Student:</label>
+                <select id="student-select">
+                    <option value="" disabled selected>Select Student</option>
+                </select>
+            </div>
+            <div id="student">
+                <p id="student-id"></p>
+                <h2 id="student-name"></h2>
+            </div>
+            <div id="student-assignments" class="hidden">
+                <ul></ul>
+                <h2>Student Assignments</h2>
+                <table>
+                    <tr>
+                        <th>ID</th>
+                        <th>Assignment</th>
+                        <th>Start Date</th>
+                        <th>Due Date</th>
+                        <th>Max Points</th>
+                        <th>Points</th>
+                        <th>Score</th>                          
+                        <th>Edit</th>
+                      </tr>
+                </table>
             </div>
         </div>
         <footer>
