working on formatting

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <body>
         <header>
             <div class="minimized-content">       
-                <h1 class="minimized">Project Management</h1>
-                <h3 class="minimized">Project management for English teachers</h3>
+                <h1 class="minimized">Curriculum Management</h1>
+                <!-- <h3 class="minimized">Project management for English teachers</h3> -->
             </div>
             <div class="tab-names">
                 <h2 class="active-tab">HOME</h2>
@@ -192,10 +192,10 @@
                 </table>
             </div>
         </div>
-        <footer>
+        <!-- <footer>
             <a href="https://www.instagram.com/brooke.buster">
                 <div><img src="./img/logos/Instagram_Glyph_Black.jpg" alt="Instagram Logo"></div>
             </a>
-        </footer>
+        </footer> -->
     </body>
 </html>
