refactored tablist event handling, reusing POST functions, streamlined book adding workflow

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                 <!-- <h3 class="minimized">Project management for English teachers</h3> -->
             </div>
             <div class="tab-names">
-                <h2 class="active-tab">HOME</h2>
-                <h2>BOOKFINDER</h2>
-                <h2>CURRICULUM</h2>
-                <h2>GRADING</h2>
+                <h2 data-name="home" class="active-tab">HOME</h2>
+                <h2 data-name="bookfinder">BOOKFINDER</h2>
+                <h2 data-name="curriculum">CURRICULUM</h2>
+                <h2 data-name="grading">GRADING</h2>
             </div>
         </header>
         <div id="home" class="tab-content active-tab">
