updating overall styles and formatting

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 </form>
                 <p id="add-dropzone" class="bookfinder-dropzone">
                     Drop book here to add to curriculum
+                    <span>&#8853;</span>
                 </p>    
             </div>
             <div id="all-books">
