--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div id="bookfinder" class="tab-content">
             <div id="bookfindernav" class="bookfinder-nav">
                 <form id="search" class="bookfinder-form">
-                    <label for="book-search">Type search query to find books</label>
+                    <!--<label for="book-search-query">Type search query to find books</label>-->
                     <div class="bookfinder-search">
                         <input type="text" id="book-search-query" name="book-search-query" placeholder="Search Query">
                     </div>
