populating data and re-querying dropdown in grading tab when assignment is created

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                     </div>
                     <div class="form-group">
                         <label for="new-assignment-descr">Description:</label>
-                        <input type="text" id="new-assignment-descr" name="new-assignment-descr">
+                        <!-- <input type="text" id="new-assignment-descr" name="new-assignment-descr"> -->
+                        <textarea id="new-assignment-descr" name="new-assignment"></textarea>
                     </div>                   
                     <div class="form-group">
                         <label for="new-assignment-start">Start Date:</label>
