fixing bug when trying to edit a student grade

--- a/index.html
+++ b/index.html
@@ -78,7 +78,6 @@
                     </div>
                     <div class="form-group">
                         <label for="new-assignment-descr">Description:</label>
-                        <!-- <input type="text" id="new-assignment-descr" name="new-assignment-descr"> -->
                         <textarea id="new-assignment-descr" name="new-assignment"></textarea>
                     </div>                   
                     <div class="form-group">
@@ -101,11 +100,11 @@
                     <h2>Details for Selected Assignment</h2>
                     <div class="form-group">
                         <label for="edit-assignment-name">Name:</label>
-                        <input type="text" id="edit-assignment-name" name="edit-ssignment-name">
+                        <input type="text" id="edit-assignment-name" name="edit-assignment-name">
                     </div>
                     <div class="form-group">
                         <label for="edit-assignment-descr">Description:</label>
-                        <input type="text" id="edit-assignment-descr" name="edit-assignment-descr">
+                        <textarea id="edit-assignment-descr" name="edit-assignment-descr"></textarea>
                     </div>  
                     <div class="form-group">
                         <label for="edit-assignment-start">Start Date:</label>
@@ -119,7 +118,7 @@
                         <label for="edit-assignment-max-points">Max Points:</label>
                         <input type="text" id="edit-assignment-max-points" name="edit-assignment-max-points">
                     </div>
-                    <input type="submit" id='submit-edit' value="EDIT FORM" />
+                    <input type="submit" id='submit-edit' value="EDIT DETAILS" />
                 </form>
             </div>
         </div>
@@ -172,9 +171,9 @@
                     </div>
                     <div class="form-group">
                         <label for="edit-comments">Comments:</label>
-                        <input type="text" id="edit-comments" name="edit-comments">
+                        <textarea type="text" id="edit-comments" name="edit-comments"></textarea>
                     </div>
-                    <input type="submit" id='submit-grade' value="EDIT FORM" />
+                    <input type="submit" id='submit-grade' value="EDIT DETAILS" />
                 </form>
             </div>
         </div>
