--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <link rel="stylesheet" href="style.css" />
         <title>My Curriculum</title>
-        <script defer src="script.js"></script>
-        <script defer src="helper.js"></script>
-        <script defer src="curriculum.js"></script>
-        <script defer src="grading.js"></script>
-        <script defer src="students.js"></script>
-        <script defer src="booklist.js"></script>
+        <script defer src="./src/script.js"></script>
+        <script defer src="./src/helper.js"></script>
+        <script defer src="./src/curriculum.js"></script>
+        <script defer src="./src/grading.js"></script>
+        <script defer src="./src/students.js"></script>
+        <script defer src="./src/booklist.js"></script>
     </head>
     <body>
         <header>
